fix(slider): MDC update
- Correctly use `mdc-floating-label` styles for label
  and and remove our overrides
- fixed layout issues
- removed styles for classes which don't exist anymore
- removed broken styles for the thumb, to re-define them in a new partial file
- make thumb styles work again
- make percentage colors work again
- fixed readonly styles
- `mdc-slider__pin-value-marker` no longer used
- fix thumb value colour for disabled slider with percentage colours
- fix position of track and thumb when readonly
- remove black stripe from track in readonly mode
- always apply `disabled` when in readonly mode
- remove unused css-property `--slider-bg-color-behind-component`

--- a/src/components/slider/partial-styles/_readonly.scss
+++ b/src/components/slider/partial-styles/_readonly.scss
@@ -3,29 +3,36 @@
 
 .lime-slider--readonly {
     .mdc-slider.mdc-slider--disabled {
-        .mdc-slider__track-container {
-            top: functions.pxToRem(2);
+        opacity: 1;
+
+        .mdc-slider__track,
+        .mdc-slider__track--active,
+        .mdc-slider__track--inactive,
+        .mdc-slider__value-indicator {
             height: functions.pxToRem(16);
-            border-radius: 10rem;
+            border-radius: functions.pxToRem(16);
         }
 
-        .mdc-slider__pin,
-        .mdc-slider__track {
-            // background-color: var(
-            //     --lime-primary-color,
-            //     mdc-theme.$mdc-theme-primary
-            // );
+        .mdc-slider__track--active {
+            top: 0;
         }
-        .mdc-slider__pin-value-marker {
-            // color: var(
-            //     --lime-on-primary-color,
-            //     mdc-theme.$mdc-theme-on-primary
-            // );
+
+        .mdc-slider__value-indicator {
+            transition: all 0s;
+            transform: translateY(functions.pxToRem(28));
         }
-        .mdc-slider__pin {
-            height: 1rem;
-            margin-top: functions.pxToRem(2);
-            font-size: functions.pxToRem(14);
+
+        .mdc-slider__thumb-knob {
+            opacity: 0;
+        }
+
+        .mdc-slider__track--active_fill,
+        .mdc-slider__thumb-knob {
+            background-color: var(--mdc-theme-primary);
+        }
+
+        .mdc-slider__track--active_fill {
+            border-color: var(--mdc-theme-primary);
         }
     }
 }
